FIX: 태블릿에서 footer company-info row-gap 추가

--- a/src/scss/main.magic-leap.scss
+++ b/src/scss/main.magic-leap.scss
@@ -1099,6 +1099,7 @@ body {
                 line-height: 1.5;
                 @include screen(t) {
                     font-size: 2vw;
+                    row-gap: 1px;
                 }
                 .company-info__love {
                     order: 2;
